--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ table, th, td {
   
 <p>Prva generacija Golfa počela se prodavati 1974., a dvije godine kasnije dobila je i športsku GTI izvedbu koja je bila opremljena 1,6-litrenim benzinskim motorom snage 110 KS. Kabriolet se prodavao od 1979. do 1993. i s nešto manje od 390 tisuća prodanih primjeraka bio najprodavaniji kabriolet na svijetu. Iako se u Europi ta generacija prestala proizvoditi 1983., u Južnoj Africi još i danas postoji model Citi Golf, koji izgleda kao kombinacija prve i druge generacije nama znanih Golfova.</p>
   
-
 <br>
   
 <p>Najznačajniji motori:</p>  
@@ -57,7 +56,7 @@ table, th, td {
 <img src="Golf1.jpg" alt="VW Golf 1">
   
 <br>
-<a href="">Stranica 1</a> 
+<a href="https://eugenkovacec.github.io/DZ/">Stranica 1</a> 
 <br>
 <a href="">Stranica 3</a> 
   
