--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ table, th, td {
 <img src="Golf1.jpg" alt="VW Golf 1">
   
 <br>
-<a href="https://eugenkovacec.github.io/DZ/">Stranica 1</a> 
+<a href="https://eugenkovacec.github.io/DZ/">Golf</a> 
 <br>
-<a href="">Stranica 3</a> 
+<a href="https://eugenkovacec.github.io/DZ2/">Golf 8</a> 
   
 </body>
 </html>
