--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ table, th, td {
   
 <br>
 <img src="Golf1.jpg" alt="VW Golf 1">
-
+<br>
+<a href="https://eugenkovacec.github.io/DZ/">Kliknite ovdje za povratak na početnu stranicu.</a>
   
 </body>
 </html>
